# DPG4

./: .gitignore  .oxfmtrc.json  .prettierrc  extract_labels.js  extract_labels.mjs  package.json  pnpm-lock.yaml  temp_labels.txt  tsconfig.json  vite.config.ts
backend/: .env.example  .gitignore  README.md  package.json  tsconfig.json
backend/admin-panel/: index.html  package.json  tsconfig.json  vite.config.ts
backend/data/: backup-tracker.json  db.sqlite-shm
backend/scripts/: backup.ts  compress-images.ts  inspect-pb.ts  migrate-from-pb.ts  restore.ts
backend/src/: config.ts  index.ts
frontend/: .env.example  .gitignore  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: error.rs  lib.rs
frontend/src-tauri/src/wallpaper/: commands.rs  image_util.rs  mod.rs  scan.rs
public/: coolpresets.json  data.json  data2.json  gameData.json  games.json  items.json
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/api/: activity.api.ts  ads.api.ts  cell.api.ts  chat.api.ts  client.api.ts  games.api.ts  items.api.ts  paint.api.ts  rules.api.ts  user.api.ts
src/config/: apps.config.ts  apps.config.tsx  auth.config.ts  cells.config.ts  cells.config.tsx  library.config.tsx  query.config.ts
src/hooks/: loader.hook.tsx  resize.hook.ts  subscription.hook.ts
tasks/: cell.md
(+363 files in other folders)
